--- a/asset_management_frontend/package.json
+++ b/asset_management_frontend/package.json
@@ -10,17 +10,16 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.10.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-   "start": "react-scripts --openssl-legacy-provider start",
-"build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
-    
-
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
